# static-dag

./: .gitignore  Makefile  README.md  USAGE.md  custom_dags.c  custom_dags.h  dag.c  dag.h  debug.h  main.c  meson.build
example/: Makefile  custom_dags.c  custom_dags.h  main.c
include/: dag.h  debug.h
test/: CMakeLists.txt  test.cpp
